# routing_agent

./: __init__.py  pyproject.toml  requirements.txt  run_tests.py  setup.py
cli/: chat.py
config/: agents.yaml  routing_rules.yaml
core/: router.py  task_classifier.py
docs/: README.md  architecture.md  installation.md
models/: hf_runner.py  llama_cpp_runner.py
routing_agent/cli/: chat.py
routing_agent/core/: detection.py  model_registry.py  router.py
routing_agent/utils/: exceptions.py
tests/integration/: test_full_workflow.py
tests/unit/: test_cli_basic.py  test_detection.py  test_model_registry.py  test_task_classifier.py
utils/: logging.py
